// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserMenu /> should render as expected when the user is logged in 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <UserMenu
    entries={null}
    isLoggedIn={true}
    logout={[MockFunction]}
    user={null}
  >
    <Portal
      name="user-menu.container.before"
      props={
        Object {
          "entries": null,
          "handleLogout": [MockFunction],
          "isLoggedIn": true,
          "logout": [MockFunction],
          "user": null,
        }
      }
    />
    <Portal
      name="user-menu.container"
      props={
        Object {
          "entries": null,
          "handleLogout": [MockFunction],
          "isLoggedIn": true,
          "logout": [MockFunction],
          "user": null,
        }
      }
    >
      <LoggedIn
        logout={[MockFunction]}
      >
        <Portal
          name="nav-menu.my-account.before"
          props={
            Object {
              "Item": [Function],
            }
          }
        />
        <Portal
          name="nav-menu.my-account"
          props={
            Object {
              "Item": [Function],
            }
          }
        >
          <div
            data-test-id="userMenu"
          >
            <Section
              title="navigation.your_account"
            >
              <Headline
                style={
                  Object {
                    "margin": "24px 20px 16px",
                  }
                }
                tag="h2"
                text="navigation.your_account"
              >
                <h2
                  className="css-18cwfw7 headline theme__headline"
                  data-test-id="Headline"
                  style={
                    Object {
                      "margin": "24px 20px 16px",
                    }
                  }
                >
                  <Translate
                    acceptPlainTextWithPlaceholders={false}
                    className={null}
                    params={Object {}}
                    role={null}
                    string="navigation.your_account"
                    transform={null}
                  >
                    <span
                      className={null}
                      role={null}
                    >
                      navigation.your_account
                    </span>
                  </Translate>
                </h2>
              </Headline>
              <div
                className={
                  Object {
                    "data-css-13ch7sr": "",
                  }
                }
              >
                <MoreMenuItem
                  className={null}
                  href="/account/profile"
                  label="navigation.profile"
                  onClick={null}
                  testId="accountButton"
                >
                  <Link
                    className="css-1hj8a57"
                    href="/account/profile"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={Object {}}
                      role={null}
                      string="navigation.profile"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        navigation.profile
                      </span>
                    </Translate>
                  </Link>
                </MoreMenuItem>
                <MoreMenuItem
                  className={null}
                  href="/account/orders"
                  label="navigation.order_history"
                  onClick={null}
                  testId="accountButton"
                >
                  <Link
                    className="css-1hj8a57"
                    href="/account/orders"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={Object {}}
                      role={null}
                      string="navigation.order_history"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        navigation.order_history
                      </span>
                    </Translate>
                  </Link>
                </MoreMenuItem>
                <MoreMenuItem
                  className={null}
                  href="/account/wish-list"
                  label="navigation.favorites"
                  onClick={null}
                  testId="accountButton"
                >
                  <Link
                    className="css-1hj8a57"
                    href="/account/wish-list"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={Object {}}
                      role={null}
                      string="navigation.favorites"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        navigation.favorites
                      </span>
                    </Translate>
                  </Link>
                </MoreMenuItem>
                <Portal
                  name="nav-menu.logout.before"
                  props={
                    Object {
                      "Item": [Function],
                    }
                  }
                />
                <Portal
                  name="nav-menu.logout"
                  props={
                    Object {
                      "Item": [Function],
                    }
                  }
                >
                  <MoreMenuItem
                    className={null}
                    href={null}
                    label="navigation.logout"
                    onClick={[MockFunction]}
                    testId="logoutButton"
                  >
                    <button
                      className="css-1hj8a57"
                      data-test-id="logoutButton"
                      onClick={[MockFunction]}
                      type="button"
                    >
                      <Translate
                        acceptPlainTextWithPlaceholders={false}
                        className={null}
                        params={Object {}}
                        role={null}
                        string="navigation.logout"
                        transform={null}
                      >
                        <span
                          className={null}
                          role={null}
                        >
                          navigation.logout
                        </span>
                      </Translate>
                    </button>
                  </MoreMenuItem>
                </Portal>
                <Portal
                  name="nav-menu.logout.after"
                  props={
                    Object {
                      "Item": [Function],
                    }
                  }
                />
              </div>
            </Section>
          </div>
        </Portal>
        <Portal
          name="nav-menu.my-account.after"
          props={
            Object {
              "Item": [Function],
            }
          }
        />
      </LoggedIn>
    </Portal>
    <Portal
      name="user-menu.container.after"
      props={
        Object {
          "entries": null,
          "handleLogout": [MockFunction],
          "isLoggedIn": true,
          "logout": [MockFunction],
          "user": null,
        }
      }
    />
  </UserMenu>
</Provider>
`;

exports[`<UserMenu /> should render as expected when the user is logged out and the buttons are disabled 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <UserMenu
    entries={null}
    isLoggedIn={false}
    logout={[Function]}
    user={null}
  >
    <Portal
      name="user-menu.container.before"
      props={
        Object {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
    <Portal
      name="user-menu.container"
      props={
        Object {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    >
      <Connect(LoggedOut)>
        <LoggedOut
          dispatch={[Function]}
          isDisabled={true}
        >
          <div
            data-test-id="userMenu"
          >
            <Grid
              className="css-az18cj theme__more-page__user-menu__container"
            >
              <Grid.Item
                className="css-mzzsxh theme__more-page__login-button__container"
              >
                <Link
                  disabled={true}
                  href="/login"
                >
                  <Button
                    className="css-6f03lb theme__more-page__login-button"
                    disabled={true}
                    testId="UserMenuLogin"
                    type="secondary"
                  >
                    <Text
                      string="login.button"
                    >
                      login.button
                    </Text>
                  </Button>
                </Link>
              </Grid.Item>
              <Grid.Item
                className="css-mzzsxh theme__more-page-register-button__container"
              >
                <Link
                  disabled={true}
                  href="/register"
                >
                  <Button
                    className="css-6f03lb theme__more-page-register-button"
                    disabled={true}
                    testId="UserMenuRegister"
                    type="secondary"
                  >
                    <Text
                      string="login.signup"
                    >
                      login.signup
                    </Text>
                  </Button>
                </Link>
              </Grid.Item>
            </Grid>
          </div>
        </LoggedOut>
      </Connect(LoggedOut)>
    </Portal>
    <Portal
      name="user-menu.container.after"
      props={
        Object {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
  </UserMenu>
</Provider>
`;

exports[`<UserMenu /> should render as expected when the user is logged out and the buttons are enabled 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <UserMenu
    entries={null}
    isLoggedIn={false}
    logout={[Function]}
    user={null}
  >
    <Portal
      name="user-menu.container.before"
      props={
        Object {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
    <Portal
      name="user-menu.container"
      props={
        Object {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    >
      <Connect(LoggedOut)>
        <LoggedOut
          dispatch={[Function]}
          isDisabled={false}
        >
          <div
            data-test-id="userMenu"
          >
            <Grid
              className="css-az18cj theme__more-page__user-menu__container"
            >
              <Grid.Item
                className="css-mzzsxh theme__more-page__login-button__container"
              >
                <Link
                  disabled={false}
                  href="/login"
                >
                  <Button
                    className="css-6f03lb theme__more-page__login-button"
                    disabled={false}
                    testId="UserMenuLogin"
                    type="secondary"
                  >
                    <Text
                      string="login.button"
                    >
                      login.button
                    </Text>
                  </Button>
                </Link>
              </Grid.Item>
              <Grid.Item
                className="css-mzzsxh theme__more-page-register-button__container"
              >
                <Link
                  disabled={false}
                  href="/register"
                >
                  <Button
                    className="css-6f03lb theme__more-page-register-button"
                    disabled={false}
                    testId="UserMenuRegister"
                    type="secondary"
                  >
                    <Text
                      string="login.signup"
                    >
                      login.signup
                    </Text>
                  </Button>
                </Link>
              </Grid.Item>
            </Grid>
          </div>
        </LoggedOut>
      </Connect(LoggedOut)>
    </Portal>
    <Portal
      name="user-menu.container.after"
      props={
        Object {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
  </UserMenu>
</Provider>
`;
